# school

./: .gitignore  README.md  minimize.js
bio1001/: exam.md  fix.md  midterm1.md  midterm2.md  midterm3.md  notes.md
cs2263/assignment1/: CMakeLists.txt  Makefile  expected0  expected1  expected2  expected3  input  input0  input1  input2  input3  log0  log1  log2  log3  maketestall  matrix  matrix.c  mymatrix.c  mymatrix.h  output0  testalloutput
cs2263/exam/: CMakeLists.txt  list.c  list.h  main.c
cs2263/lab1/: 1.c  2.c  3.c  CMakeLists.txt  teammembers
cs2263/lab2/: 4.c  CMakeLists.txt
cs2263/lab3/: 1.c  CMakeLists.txt  temp.c
cs2263/lab4/: 2.c  3.c  4.c  Makefile  four  three  two
cs2263/lab5/: CMakeLists.txt  Makefile  input0  input1  main  main.c  (+5 more)
cs2383/: exam.md  practice.go  practice_test.go
cs2704/: Pipfile  l1.py
cs3283/: midterm.md
cs3413/: .gitignore  CMakeLists.txt  a1.c  lib.c  lib.h  list.h  list.test.c
cs3413/a1/: CMakeLists.txt  Makefile  README.md  a1.c  common.c  common.h  common.h.gch  input.txt  input_complex.txt  input_empty.txt  input_one.txt  input_sparse.txt  lib.c  lib.h  lib.h.gch  lib.test.c  list.c  list.h  list.h.gch  list.test.c  q1.c  q2.c  q3.c
cs3413/a1/assets/: lib.txt
cs3413/a3/: CMakeLists.txt  README.md  common.c  common.h  cv.c  cv.h  cv.h.gch  input_q1.txt  input_q1_complex.txt  input_q2.txt  input_q2_complex.txt  list.h.gch  q1.c  q2.c
cs3503/: exam.md
cs6735/: chap6.md  exam.md  research.md
docs/: index.html  output_2000.html  output_2016.html
ece3232/: exam.c  exam.md
swe4203/: CPRGui.java
swe4403/: exam.md
(+255 files in other folders)
